src/styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Barlow', sans-serif;
}

body {
    background: url(../images/background.png);
    background-repeat: repeat;
    background-color: #2a365e;
    color: #f5f3eb;
    font-size: 0.875rem;
}


/* -------------------------------------------------
--------------------- TOP BAR --------------------- 
--------------------------------------------------- */

.top-bar {
    background-color: rgba(0,0,0,0.25);
}

.container {
    max-width: 850px;
    height: 100%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#btn-pause-start {
    width: 20px;
    height: auto;
    margin-right: 0.5em;
    cursor: pointer;
}

.performance {
    display: flex;
    align-items: center;
}

.clock {
    width: 36px;
}

.points, .moves {
    text-align: right;
    width: 90px;
}

.btn {
    font-weight: 500;
    font-size: 0.875rem;
    color: #f5f3eb;
    background-color: unset;
    border: unset;
    margin-left: 0.5em;
    padding: 1em 0.75em;
    cursor: pointer;
}

.btn:hover {
    background-color: rgba(0,0,0,0.5);
}

.inactive {
    color: rgba(245,243,235,0.75);
    cursor: not-allowed;
}

.inactive:hover {
    background-color: transparent;
}

/* -------------------------------------------------
 -------------------- GAME AREA -------------------- 
 ------------------------------------------------- */

.game-area {
    max-width: 850px;
    margin: 3em auto 0;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
    grid-column-gap: 1em;
    grid-row-gap: 3em;
}

.waste-pile {
    grid-column: 6 / 7;
}

.stock-pile {
    color: rgba(245,243,235,0.5);
    grid-column: 7 / 8;
    font-size: 3em;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
}

.tableau-pile {
    grid-row: 2 / 3;
}


.placeholder {
    background-color: rgba(245,243,235,0.05);
    border: 1px solid rgba(245,243,235,0.15);
    border-radius: 5px;
    width: 100px;
    height: 150px;
    position: relative;
}

.card {
    width: 100px;
    height: 150px;
    border-radius: 5px;
    border: 1px solid #c1b585;
    position: absolute;
    cursor: pointer;
}

.card-active {
    border: 2px solid #705c0d;
}

.hidden {
    cursor: auto;
}

